--- a/css/_placegiftcrafter.scss
+++ b/css/_placegiftcrafter.scss
@@ -11,6 +11,8 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
         width: 100%;
+        box-shadow: rgba(0, 0, 0, 0.25) 2px 3px 5px;
+        border-radius: 5px;
         justify-self: center;
         justify-items: center;
         .cover {
@@ -34,10 +36,11 @@
         display: grid;
         gap: 10px;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
-        width: 100%;
+        grid-template-rows: 200px;
+        width: 90%;
         margin: 0px;
-        gap: 10px 21px;
+        margin-left: 5%;
+        gap: 0px 21px;
         >.placeholder {
             display: grid;
             grid-template-columns: 1fr;
