--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -3,5 +3,19 @@ $lightgreencolor: #50E3C2;
 $lightwhite: #F3F5F8 ;
 $activecolor: #9CAFC3;
 
+$colorPrimary: rgb(87, 46, 229);
+$colorPrimaryTransparency: rgba(87, 46, 229, 0.9);
+$colorWhite: #ffffff;
+$colorWhiteTransparency: rgba(255, 255, 255, 0.95);
+$colorGray: #d8d8d8;
+$colorDarkGray: #9cafc3;
+$colorAqua: #50e3c2;
+$colorTreding: #f3f5f8;
+$colorActionBG: rgba(87, 46, 229, 0.6);
+$colorDark: #37383c;
+$colorDarkTransparency: rgba(34, 35, 38, 0.95);
+$colorTredingDark: #222326;
+$desk: "min-width: 1366px";
+$tablet: "min-width: 768px";
 
 $font: 'Montserrat', sans-serif;
