--- a/css/_favoritos.scss
+++ b/css/_favoritos.scss
@@ -12,3 +12,15 @@
         height: 100px;
     }
 }
+
+.favoritos__title {
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    >img {
+        justify-self: center;
+        width: 5%;
+        margin-left: 47%;
+    }
+}
