--- a/css/_trending.scss
+++ b/css/_trending.scss
@@ -51,7 +51,7 @@
             display: none;
         }
         #gifs {
-            width: 260px;
+            width: auto;
             height: 100%;
             overflow-x: scroll;
             img {
@@ -94,8 +94,9 @@
             margin-top: 53px;
             overflow: hidden;
             #gifs {
-                width: 80%;
+                width: 90%;
                 height: 100%;
+                padding-left: 60%;
                 margin: 0px;
                 overflow: hidden;
                     img {
