--- a/css/_trending.scss
+++ b/css/_trending.scss
@@ -94,13 +94,13 @@
             margin-top: 53px;
             overflow: hidden;
             #gifs {
-                width: 90%;
+                width: 80%;
                 height: 100%;
-                padding-left: 60%;
                 margin: 0px;
                 overflow: hidden;
                     img {
                         //width: 35%;
+                        padding-left: 20px;
                         height: inherit;
                         margin: 0rem 14px;
                     }
